[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fifteen.gd" type="Script" id=1]
[ext_resource path="res://Tablero/Tablero.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=3]

[node name="Fifteen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Fondo" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -160.0
margin_right = 160.0
margin_bottom = 160.0
color = Color( 0.368627, 0.368627, 0.368627, 0.945098 )

[node name="Tablero" parent="Fondo" instance=ExtResource( 2 )]
position = Vector2( 32, 32 )

[node name="UI" parent="." instance=ExtResource( 3 )]
[connection signal="ganar" from="Fondo/Tablero" to="." method="_on_Tablero_ganar"]
[connection signal="invertir_control" from="UI" to="." method="_on_UI_invertir_control"]
[connection signal="reiniciar" from="UI" to="." method="_on_UI_reiniciar"]
